--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "vite preview --host --port $PORT"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
