--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview --host --port $PORT"
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
@@ -16,7 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
