--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.0",
-    "serve": "^14.2.1"
+    "serve": "^14.2.1",
+    "ioredis": "^5.3.2",
+    "@types/ioredis": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
